--- a/.github/workflows/render-index.yaml
+++ b/.github/workflows/render-index.yaml
@@ -28,5 +28,5 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git commit index.html img/mainplot.png data/wrangled_data.rda -m 'Re-build index.Rmd' || echo "No changes to commit"
+          git commit _site -m 'Re-build _site' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
